tests/models/struct/u64/fail/min_items.rs
use dade::model;
#[model]
struct TestModel {
    #[field(min_items = 2)]
    value: u64,
}
fn main() {}
